--- a/_Fonts.scss
+++ b/_Fonts.scss
@@ -1,24 +1,62 @@
+/*@font-face {
+    font-family: IRANSansX;
+    font-style: normal;
+    font-weight: 100;
+    src: url('Font/IRANSansWeb/woff2/IRANSansXFaNum-Thin.woff2') format('woff2'), url('Font/IRANSansWeb/woff/IRANSansXFaNum-Thin.woff') format('woff'), url('Font/IRANSansWeb/ttf/IRANSansXFaNum-Thin.ttf') format('ttf');
+}*/
+
+/*@font-face {
+    font-family: IRANSansX;
+    font-style: normal;
+    font-weight: 200;
+    src: url('Font/IRANSansWeb/woff2/IRANSansXFaNum-UltraLight.woff2') format('woff2'), url('Font/IRANSansWeb/woff/IRANSansXFaNum-UltraLight.woff') format('woff'),url('Font/IRANSansWeb/ttf/IRANSansXFaNum-UltraLight.ttf') format('ttf');
+}*/
+
 @font-face {
-    font-family: iranSansNormal;
-    src: url('./0Font/IRANSansWeb/IRANSansWeb\(FaNum\).ttf');
+    font-family: IRANSansX;
+    font-style: normal;
+    font-weight: 300;
+    src: url('Font/IRANSansWeb/woff2/IRANSansXFaNum-Light.woff2') format('woff2'), url('Font/IRANSansWeb/woff/IRANSansXFaNum-Light.woff') format('woff'), url('Font/IRANSansWeb/ttf/IRANSansXFaNum-Light.ttf') format('ttf'),;
 }
+
 @font-face {
-    font-family: iranSansBlack;
-    src: url('./0Font/IRANSansWeb/IRANSansWeb\(FaNum\)_Black.ttf');
+    font-family: IRANSansX;
+    font-style: normal;
+    font-weight: 500;
+    src: url('Font/IRANSansWeb/woff2/IRANSansXFaNum-Medium.woff2') format('woff2'), url('Font/IRANSansWeb/woff/IRANSansXFaNum-Medium.woff') format('woff'), url('Font/IRANSansWeb/ttf/IRANSansXFaNum-Medium.ttf') format('ttf');
 }
+
+/*@font-face {
+    font-family: IRANSansX;
+    font-style: normal;
+    font-weight: 600;
+    src: url('Font/IRANSansWeb/woff2/IRANSansXFaNum-DemiBold.woff2') format('woff2'), url('Font/IRANSansWeb/woff/IRANSansXFaNum-DemiBold.woff') format('woff'), url('Font/IRANSansWeb/ttf/IRANSansXFaNum-DemiBold.ttf') format('ttf');
+}*/
+
+/*@font-face {
+    font-family: IRANSansX;
+    font-style: normal;
+    font-weight: 800;
+    src: url('Font/IRANSansWeb/woff2/IRANSansXFaNum-ExtraBold.woff2') format('woff2'), url('Font/IRANSansWeb/woff/IRANSansXFaNum-ExtraBold.woff') format('woff'), url('Font/IRANSansWeb/ttf/IRANSansXFaNum-ExtraBold.ttf') format('ttf');
+}*/
+
 @font-face {
-    font-family: iranSansBold;
-    src: url('./0Font/IRANSansWeb/IRANSansWeb\(FaNum\)_Bold.ttf');
+    font-family: IRANSansX;
+    font-style: normal;
+    font-weight: 900;
+    src: url('Font/IRANSansWeb/woff2/IRANSansXFaNum-Black.woff2') format('woff2'), url('Font/IRANSansWeb/woff/IRANSansXFaNum-Black.woff') format('woff'), url('Font/IRANSansWeb/ttf/IRANSansXFaNum-Black.ttf') format('ttf');
 }
+
 @font-face {
-    font-family: iranSansLight;
-    src: url('./0Font/IRANSansWeb/IRANSansWeb\(FaNum\)_Light.ttf');
+    font-family: IRANSansX;
+    font-style: normal;
+    font-weight: bold;
+    src: url('Font/IRANSansWeb/woff2/IRANSansXFaNum-Bold.woff2') format('woff2'), url('Font/IRANSansWeb/woff/IRANSansXFaNum-Bold.woff') format('woff'), url('Font/IRANSansWeb/ttf/IRANSansXFaNum-Bold.ttf') format('ttf');
 }
+
 @font-face {
-    font-family: iranSansMedium;
-    src: url('./0Font/IRANSansWeb/IRANSansWeb\(FaNum\)_Medium.ttf');
-}
-@font-face {
-    font-family: iranSansUltraLight;
-    src: url('./0Font/IRANSansWeb/IRANSansWeb\(FaNum\)_UltraLight.ttf');
+    font-family: IRANSansX;
+    font-style: normal;
+    font-weight: normal;
+    src: url('Font/IRANSansWeb/woff2/IRANSansXFaNum-Regular.woff2') format('woff2'), url('Font/IRANSansWeb/woff/IRANSansXFaNum-Regular.woff') format('woff'), url('Font/IRANSansWeb/ttf/IRANSansXFaNum-Regular.ttf') format('ttf');
 }
