--- a/style.css
+++ b/style.css
@@ -2085,16 +2085,43 @@ a#attention .courseName {
   padding-top: 8em;
 }
 
-.outlet .mainPageSection.Qcomment .contain button {
-  background-color: purple;
-  color: white;
-  padding: 1.2em 4em;
-  border-radius: 40px;
-  margin-right: 5%;
-  margin-top: 1em;
+.outlet .mainPageSection.Qcomment .contain hr {
+  width: 87%;
+  height: 0.1em;
+  background-color: #bbb;
+  margin: auto;
+  margin-top: 3em;
+}
+
+.outlet .mainPageSection.Qcomment .contain .buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 2em;
+}
+
+.outlet .mainPageSection.Qcomment .contain .buttons button {
+  background-color: white;
+  padding: .8em 3em;
   font-weight: 500;
-  font-size: 1.3;
   cursor: pointer;
+  border-radius: 0 0px 35px 35px;
+  font-size: 14px;
+  color: #494949;
+}
+
+.outlet .mainPageSection.Qcomment .contain .buttons button.close {
+  display: none;
 }
 
 .outlet .mainPageSection.Qcomment.minimal .contain button {
