--- a/style.scss
+++ b/style.scss
@@ -1364,6 +1364,194 @@ a#attention {
       --quers-sig: #0097f3;
       --ans-sig: green;
 
+      --comment-blue: #1d3bbb;
+
+      .question,
+      .answer {
+        //row
+        @include flex(fs, c);
+        position: relative;
+        gap: 2em;
+        padding-bottom: 1em;
+        font-size: 11px;
+        --icon-width: 6em;
+
+        >span {
+          background-color: white;
+          max-width: calc(100% - 15.2em);
+          padding: .6em 1.3em;
+          border-radius: 25px 25px 0 25px;
+          font-size: 1.3em;
+          font-weight: 500;
+          margin: 1em 0;
+          position: relative;
+
+          span {
+            position: absolute;
+            bottom: -2.2em;
+            right: 1em;
+            direction: ltr;
+            font-size: 13px;
+
+            &::before {
+              font-family: "Font Awesome 5 Free";
+              font-weight: 400;
+              padding-right: .2em;
+            }
+
+            &:nth-child(1)::before {
+              content: attr(data-date) ' ';
+            }
+
+            &:nth-child(2) {
+              right: 10em;
+
+              &::before {
+                content: attr(data-time) ' ';
+              }
+            }
+          }
+
+          i::before {
+            content: '\f3e5';
+            font-family: "Font Awesome 5 Free";
+            font-weight: 800;
+            font-style: normal;
+            position: absolute;
+            bottom: -1.6em;
+            left: 1em;
+            font-size: 1.2em;
+            color: var(--ans-sig);
+            cursor: pointer;
+          }
+        }
+
+        .icon {
+          background: url('./images/img/Asset\ 4.png');
+          @include square(var(--icon-width));
+          border-radius: 50%;
+          background-size: 100%;
+          position: relative;
+          flex: 0 0 var(--icon-width);
+
+          &::before {
+            content: 'Q';
+            font-family: "Font Awesome 5 Free";
+            font-weight: 900;
+            background-color: var(--quers-sig);
+            position: absolute;
+            top: -.5em;
+            right: -.5em;
+            z-index: 2;
+            border-radius: 50%;
+            color: white;
+            @include flex(c, c);
+            font-size: 1.8em;
+            padding: 0.1em 0.5em;
+
+          }
+
+          &[data-admin]::after {
+            content: attr(data-admin);
+          }
+
+          &[data-user]::after {
+            content: attr(data-user);
+          }
+
+          &::after {
+            position: absolute;
+            right: calc(var(--icon-width) / 2.8);
+            bottom: -2em;
+            width: 0;
+            white-space: nowrap;
+            display: flex;
+            justify-content: center;
+            font-weight: 800;
+            font-size: 1.4em;
+          }
+        }
+
+        &:last-child {
+          padding-bottom: 3em;
+        }
+
+        &:nth-child(6) {
+          padding-bottom: 3em;
+        }
+
+      }
+
+      .validationMsg {
+        color: red;
+        font-weight: 700;
+        transition: .3s;
+        display: none;
+
+        &.show {
+          display: block;
+        }
+      }
+
+      input,
+      textarea {
+        border: 2px solid #ccc;
+        border-radius: 10px;
+        padding: 10px 15px;
+        font-size: 1.3em;
+      }
+
+      label {
+        position: absolute;
+        top: -1.3em;
+        right: 2em;
+        background-color: white;
+        padding: .2em .4em;
+        color: var(--comment-blue);
+        font-weight: 800;
+        height: 2em;
+      }
+
+      button[type=submit] {
+        grid-area: commentButton;
+        width: 8em;
+        height: 3em;
+        border-radius: 10px;
+        color: #fff;
+        text-align: center;
+        border: none;
+        background: #1c43c2;
+        background: -moz-linear-gradient(90deg, #1c43c2 32%, #19cde8 71%) !important;
+        background: -webkit-linear-gradient(90deg, #1c43c2 32%, #19cde8 71%) !important;
+        background: linear-gradient(90deg, #1c43c2 32%, #19cde8 71%) !important;
+        cursor: pointer;
+        margin-right: auto;
+      }
+
+      p.success {
+        grid-area: confirmation;
+        margin: 0;
+        text-align: center;
+        opacity: 0;
+        max-height: 0;
+        color: var(--comment-blue);
+        font-weight: 700;
+        transition: .2s;
+        @include flex(c, c);
+        gap: .4em;
+        font-size: 1.2em;
+
+        i {
+          font-size: 1.3em;
+          color: green;
+        }
+
+        &.show {
+          max-height: 3em;
+          opacity: 100;
+        }
+      }
+
       .contain {
         margin: 0 -70px;
         padding: 5em 0;
@@ -1412,8 +1600,66 @@ a#attention {
           }
         }
 
+        .forms {
+          width: 91%;
+          margin: auto;
+          overflow: visible;
+
+          .formTab {
+            margin-right: 6em;
+
+            span {
+              background-color: #d5d5d5;
+              border-radius: 10px 10px 0 0;
+              padding: .1em 2em;
+              cursor: pointer;
+              font-size: 1.3em;
+              display: inline-block;
+              transition: .3s;
+
+              &.active {
+                background-color: white;
+              }
+            }
+          }
+
+          .send {
+            box-shadow: 0px 0px 5px #68686854;
+            background-color: white;
+            border-radius: 15px;
+            padding: 3em 6em;
+            padding-bottom: 5em;
+            display: grid;
+            grid-template-columns: 83% auto;
+            grid-template-areas: "confirmation confirmation""commentTitle commentButton""comment comment";
+            gap: 2em 0;
+
+            .commentTitle {
+              grid-area: commentTitle;
+              position: relative;
+
+
+              input {
+                width: 100%;
+                height: 50px;
+              }
+            }
+
+            .comment {
+              grid-area: comment;
+              position: relative;
+
+              textarea {
+                width: 100%;
+                height: 10em;
+              }
+            }
+          }
+        }
+
         >div {
           overflow-Y: hidden;
+
           section {
             width: 85%;
             margin: auto;
@@ -1421,122 +1667,10 @@ a#attention {
             transition: 2s;
 
             &.fast {
-              transition: .1s;
+              transition: .5s;
             }
 
-            >* {
-              //row
-              @include flex(fs, c);
-              position: relative;
-              gap: 2em;
-              padding-bottom: 1em;
-              font-size: 11px;
-              --icon-width: 6em;
 
-              >span {
-                background-color: white;
-                max-width: calc(100% - 15.2em);
-                padding: .6em 1.3em;
-                border-radius: 25px 25px 0 25px;
-                font-size: 1.3em;
-                font-weight: 500;
-                margin-bottom: 1em;
-                position: relative;
-
-                span {
-                  position: absolute;
-                  bottom: -2.2em;
-                  right: 1em;
-                  direction: ltr;
-                  font-size: 13px;
-
-                  &::before {
-                    font-family: "Font Awesome 5 Free";
-                    font-weight: 400;
-                    padding-right: .2em;
-                  }
-
-                  &:nth-child(1)::before {
-                    content: attr(data-date) ' ';
-                  }
-
-                  &:nth-child(2) {
-                    right: 10em;
-
-                    &::before {
-                      content: attr(data-time) ' ';
-                    }
-                  }
-                }
-
-                i::before {
-                  content: '\f3e5';
-                  font-family: "Font Awesome 5 Free";
-                  font-weight: 800;
-                  font-style: normal;
-                  position: absolute;
-                  bottom: -1.6em;
-                  left: 1em;
-                  font-size: 1.2em;
-                  cursor: pointer;
-                }
-              }
-
-              .icon {
-                background: url('./images/img/Asset\ 4.png');
-                @include square(var(--icon-width));
-                border-radius: 50%;
-                background-size: 100%;
-                position: relative;
-                flex: 0 0 var(--icon-width);
-
-                &::before {
-                  content: 'Q';
-                  font-family: "Font Awesome 5 Free";
-                  font-weight: 900;
-                  background-color: var(--quers-sig);
-                  position: absolute;
-                  top: 0;
-                  right: 0;
-                  z-index: 2;
-                  border-radius: 50%;
-                  color: white;
-                  @include flex(c, c);
-                  font-size: 1.8em;
-                  padding: 0.1em 0.5em;
-
-                }
-
-                &[data-admin]::after {
-                  content: attr(data-admin);
-                }
-
-                &[data-user]::after {
-                  content: attr(data-user);
-                }
-
-                &::after {
-                  position: absolute;
-                  right: calc(var(--icon-width) / 2.8);
-                  bottom: -2em;
-                  width: 0;
-                  white-space: nowrap;
-                  display: flex;
-                  justify-content: center;
-                  font-weight: 800;
-                  font-size: 1.4em;
-                }
-              }
-
-              &:last-child {
-                padding-bottom: 3em;
-              }
-
-              &:nth-child(6) {
-                padding-bottom: 3em;
-              }
-
-            }
 
             .answer {
               flex-direction: row-reverse;
@@ -1544,7 +1678,7 @@ a#attention {
               .icon {
                 &::before {
                   content: 'A';
-                  left: 0;
+                  left: -.5em;
                   right: unset;
                   background-color: var(--ans-sig);
                 }
@@ -1575,6 +1709,15 @@ a#attention {
               >span i::before {
                 display: none;
               }
+            }
+
+            .question::before {
+              content: attr(data-title);
+              position: absolute;
+              right: 8em;
+              top: -1em;
+              font-size: 1.2em;
+              font-weight: 600;
             }
 
             .answer+.answer.combine,
@@ -1615,21 +1758,96 @@ a#attention {
         }
 
         .buttons {
-          @include flex(c,c);
+          @include flex(c, c);
           gap: 2em;
 
           button {
-            background-color: white;
             padding: .8em 3em;
             font-weight: 500;
             cursor: pointer;
             border-radius: 0 0px 35px 35px;
             font-size: 14px;
-            color: #494949;
+            background: linear-gradient(90deg, #fe8622 32%, #feab21 71%);
+            color: #333;
+            font-weight: 700;
+            font-family: iransansx;
+
             &.close {
               display: none;
             }
           }
+        }
+      }
+
+      .replyModal {
+        display: none;
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 20;
+
+        &.active {
+          display: block;
+        }
+
+        .overlay {
+          width: 100vw;
+          height: 100vh;
+          background-color: #8080807a;
+          cursor: pointer;
+        }
+
+        .content {
+          width: 80%;
+          margin: auto;
+          background-color: #e7e7e7;
+          padding: 3em;
+          position: absolute;
+          top: 0;
+          margin: auto;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          height: max-content;
+          border-radius: 12px;
+
+          i.fa-times {
+            position: absolute;
+            left: 1em;
+            top: 1em;
+            font-size: 1.6em;
+            cursor: pointer;
+          }
+
+          .question {
+            padding-bottom: 4em;
+
+            span i {
+              display: none;
+            }
+          }
+
+          .reply {
+            position: relative;
+            display: inline-block;
+            width: 80%;
+
+            label {
+              border-radius: 10px 10px 0 0;
+              padding: 0 0.8em;
+            }
+
+            textarea {
+              width: 100%;
+              height: 9em;
+            }
+          }
+
+          button {
+            float: left;
+            margin-left: 4%;
+          }
+
         }
       }
 
