--- a/style.scss
+++ b/style.scss
@@ -1526,6 +1526,7 @@ a#attention {
         background: linear-gradient(90deg, #1c43c2 32%, #19cde8 71%) !important;
         cursor: pointer;
         margin-right: auto;
+        font-family: iransansx;
       }
 
       p.success {
@@ -1760,6 +1761,8 @@ a#attention {
         .buttons {
           @include flex(c, c);
           gap: 2em;
+          position: relative;
+          overflow: visible;
 
           button {
             padding: .8em 3em;
@@ -1771,9 +1774,28 @@ a#attention {
             color: #333;
             font-weight: 700;
             font-family: iransansx;
+            opacity: 100;
+            transition: .3s;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            z-index: 5;
 
             &.close {
-              display: none;
+              opacity: 0;
+              z-index: 2;
+            }
+          }
+
+          &.twoButtons {
+            .more {
+              right: -13em;
+            }
+            .close {
+              left: -13em;
+              opacity: 100;
             }
           }
         }
@@ -1846,6 +1868,7 @@ a#attention {
           button {
             float: left;
             margin-left: 4%;
+            margin-top: 4%;
           }
 
         }
